<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_8sdp"
    android:background="@drawable/rounded_edge_bottom_sheet">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_get_code"
        android:textColor="@color/text_black_color"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/_22sdp"
        android:layout_marginVertical="@dimen/_25sdp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_1"
                android:textColor="@color/text_black_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_13sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_arrow"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_1_text"
                android:textColor="@color/description_color"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_2"
                android:textColor="@color/text_black_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_13sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_arrow"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_2_text"
                android:textColor="@color/description_color"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_3"
                android:textColor="@color/text_black_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_13sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_arrow"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_3_text"
                android:textColor="@color/description_color"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_4"
                android:textColor="@color/text_black_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_13sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_arrow"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_4_text"
                android:textColor="@color/description_color"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_5"
                android:textColor="@color/text_black_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_13sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_arrow"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_5_text"
                android:textColor="@color/description_color"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_6"
                android:textColor="@color/text_black_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_13sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_arrow"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_6_text"
                android:textColor="@color/description_color"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>