<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/logout"
            android:textColor="@color/text_black_color"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/gray_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/are_you_sure_want_to_log_out"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancelBtn"
                style="@style/buttonTheme_white"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/tvLogoutBtn"
                style="@style/buttonTheme"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_weight="1"
                android:text="@string/log_out" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>