<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".activity.SignInActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_to_access_your_account"
        android:textColor="@color/description_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/mainDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <RelativeLayout
        android:id="@+id/mainDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/background_dialog"
        android:elevation="10dp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/email"
            android:textColor="@color/text_black_color"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_unselected"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/emailImg"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/email_icon" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/gradient_edit_filed" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:imeOptions="actionNext"
                android:hint="@string/eg_robert_gmail_com"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/text_black_color"
                android:textColorHint="@color/email_hint_color"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llEmailField"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textColor="@color/text_black_color"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_unselected"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/LockImg"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/password_icon" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/gradient_edit_filed" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/text_black_color"
                android:textColorHint="@color/email_hint_color"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbPasswordEye"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:button="@drawable/password_hide" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llPasswordField"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/forgot_password_sign_in"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvSignInBtn"
            style="@style/buttonTheme"
            android:layout_below="@+id/tvForget"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_in" />

        <LinearLayout
            android:id="@+id/llOrContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignInBtn"
            android:layout_marginVertical="@dimen/_15sdp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/or"
                android:textColor="@color/description_color"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#E0E0E0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/llOrContent"
            android:background="@drawable/gry_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/_5sdp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/description_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>