<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".activity.SOSActivity">

    <RelativeLayout
        android:id="@+id/mainDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/background_dialog"
        android:elevation="10dp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/ivSOSIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sos_icon"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_is_provided"
            android:textSize="@dimen/_16sdp"
            android:layout_below="@+id/ivSOSIcon"
            android:textColor="@color/text_black_color"
            android:fontFamily="@font/roboto_medium"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvSubContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/parents_can_see_where_you_are_and_come_to_rescue_you_deactivate_the_alarm_if_everything_is_fine_with_you"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/tvTitle"
            android:textColor="@color/description_color"
            android:fontFamily="@font/roboto_regular"/>


        <TextView
            android:id="@+id/tvdeactivateBtn"
            style="@style/buttonTheme_red"
            android:layout_below="@+id/tvSubContent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/deactivate" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>